Add password confirmation + request body log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8084
 zuul.routes.matchamate-user-api.url=http://localhost:8081
 zuul.routes.matchamate-password-api.url=http://localhost:8082
 zuul.routes.matchamate-session-api.url=http://localhost:8083
+zuul.routes.matchamate-player-api.url=http://localhost:8085
 ribbon.eureka.enabled=false
 
 
@@ -28,5 +29,5 @@ spring.data.mongodb.password=azerty
 spring.data.mongodb.database=matchamate_auth_server_db
 
 # App Properties
-matchamate.app.jwtSecret= matchamateSecretKey
-matchamate.app.jwtExpirationMs= 300000
+matchamate.app.jwtSecret=matchamateSecretKey
+matchamate.app.jwtExpirationMs=1200000
