--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=8084
 
-zuul.routes.matchamate-user-api.url=http://localhost:8081
-zuul.routes.matchamate-password-api.url=http://localhost:8082
 zuul.routes.matchamate-session-api.url=http://localhost:8083
 zuul.routes.matchamate-player-api.url=http://localhost:8085
+zuul.routes.matchamate-company-api.url=http://localhost:8086
 ribbon.eureka.enabled=false
 
 
@@ -30,4 +29,4 @@ spring.data.mongodb.database=matchamate_auth_server_db
 
 # App Properties
 matchamate.app.jwtSecret=matchamateSecretKey
-matchamate.app.jwtExpirationMs=1200000
+matchamate.app.jwtExpirationMs=900000
